--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -91,9 +91,16 @@
             };
 
             utterance.onend = () => {
-                isSpeaking = false;
-                robotImg.src = ROBOT_STATIC;
-            };
+        isSpeaking = false;
+        robotImg.src = ROBOT_STATIC;
+
+        // Adicionar atraso antes de permitir o reconhecimento
+        setTimeout(() => {
+            if (recognition && !isSpeaking) {
+                recognition.start();
+            }
+        }, 2000); // Atraso de 2 segundos
+    };
 
             synth.speak(utterance);
         }
