--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -55,81 +55,33 @@
         const speakButton = document.getElementById("speak-button");
 
         let recognition;
-        let isSpeaking = false; // Estado para rastrear se o robô está falando
-        let staticTime = 0; // Tempo acumulado em estado estático
-        let alternateTimeout; // Timeout para exibição de `robo2.gif`
+        let isSpeaking = false; 
+        let staticTime = 0; 
+        let alternateTimeout;
 
-        // Função para o robô falar
-        function speak(text, rate = 0.8) {
-            const synth = window.speechSynthesis;
-            const voices = synth.getVoices();
-            let selectedVoice = voices.find((voice) => voice.lang === "en-US");
-
-            if (!selectedVoice) {
-                console.warn("Voz 'en-US' não encontrada. Usando a primeira voz disponível.");
-                selectedVoice = voices[0]; // Fallback para a primeira voz disponível
-            }
-
-            console.log("Usando voz:", selectedVoice ? selectedVoice.name : "Nenhuma voz disponível.");
-
-            const utterance = new SpeechSynthesisUtterance(text);
-            utterance.lang = selectedVoice ? selectedVoice.lang : "en-US";
-            utterance.voice = selectedVoice;
-            utterance.rate = rate;
-
-            utterance.onstart = () => {
-                isSpeaking = true;
-                robotImg.src = ROBOT_GIF;
-
-                if (recognition && recognition.state === 'active') {
-                    recognition.stop();
-                }
-
-                // Resetar temporizador de estado estático
-                clearInterval(alternateTimeout);
-                staticTime = 0;
+        function getParamsFromURL() {
+            const params = new URLSearchParams(window.location.search);
+            return {
+                uid: params.get('uid'),
+                level: params.get('level'),
             };
-
-            utterance.onend = () => {
-                isSpeaking = false;
-                robotImg.src = ROBOT_STATIC;   
-            };
-
-            synth.speak(utterance);
         }
 
-        // Alternar imagem após 15 segundos
-        function startStaticImageTimer() {
-            setInterval(() => {
-                if (!isSpeaking) {
-                    staticTime += 1;
-
-                    if (staticTime === 15) {
-                        robotImg.src = ROBOT_ALTERNATE; // Mostrar `robo2.gif`
-
-                        // Voltar à imagem estática após 10 segundos
-                        alternateTimeout = setTimeout(() => {
-                            robotImg.src = ROBOT_STATIC;
-                            staticTime = 0; // Resetar tempo estático
-                        }, 10000);
-                    }
-                }
-            }, 1000); // Verificar a cada 1 segundo
-        }
-
-        // Inicializar conversa
         async function initializeConversation() {
             try {
+                const { uid, level } = getParamsFromURL();
+                if (!uid || !level) {
+                    throw new Error("UID and Level must be provided in the URL.");
+                }
+
                 console.log("Fetching initial conversation...");
-                const response = await fetch('/api/start');
+                const response = await fetch(`/api/start?uid=${uid}&level=${level}`);
                 const data = await response.json();
                 console.log("Received data:", data);
 
-                // Atualizar texto inicial
                 messageElement.style.visibility = "hidden";
                 messageElement.innerText = data.response;
 
-                // Carregar vozes
                 const waitForVoices = new Promise((resolve) => {
                     const synth = window.speechSynthesis;
                     if (synth.getVoices().length > 0) {
@@ -142,22 +94,16 @@
                 await waitForVoices;
                 console.log("Vozes carregadas.");
 
-                // Alterar texto do botão para "Press to Start"
                 speakButton.innerText = "Press to Start";
 
                 speakButton.addEventListener("click", () => {
-                    // Mostrar o texto inicial e iniciar fala do robô
                     messageElement.style.visibility = "visible";
                     speak(data.response);
 
-                    // Alterar texto do botão para "Press to Speak"
                     speakButton.innerText = "Press to Speak";
-
-                    // Atualizar evento do botão para reconhecimento de fala
                     speakButton.addEventListener("click", () => {
                         if (!isSpeaking && recognition) {
                             recognition.start();
-                            console.log("Speech recognition started.");
                         } else {
                             console.warn("Recognition instance not available.");
                         }
@@ -169,61 +115,38 @@
             }
         }
 
-        // Configurar reconhecimento de voz
-        function setupSpeechRecognition() {
-            try {
-                recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
-                recognition.lang = "en-US";
-                recognition.interimResults = false;
-                recognition.maxAlternatives = 1;
+        function speak(text, rate = 0.8) {
+            const synth = window.speechSynthesis;
+            const voices = synth.getVoices();
+            let selectedVoice = voices.find((voice) => voice.lang === "en-US");
 
-                navigator.mediaDevices.getUserMedia({ audio: true })
-                    .then(() => {
-                        console.log("Microphone permission granted.");
-                    })
-                    .catch((error) => {
-                        alert("Microphone permission denied. Please enable it in your browser settings.");
-                        console.error("Microphone access error:", error);
-                    });
-
-                recognition.onstart = () => {
-                    speakButton.classList.add("listening");
-                    speakButton.innerText = "Listening...";
-                };
-
-                recognition.onend = () => {
-                    speakButton.classList.remove("listening");
-                    speakButton.innerText = "Press to Speak";
-                };
-
-                recognition.onresult = async (event) => {
-                    const userSpeech = event.results[0][0].transcript;
-                    messageElement.innerText = `You said: ${userSpeech}`;
-                    try {
-                        const response = await fetch('/api/chat', {
-                            method: 'POST',
-                            headers: { 'Content-Type': 'application/json' },
-                            body: JSON.stringify({ message: userSpeech })
-                        });
-                        const data = await response.json();
-                        messageElement.innerText = data.response;
-                        speak(data.response);
-                    } catch (error) {
-                        console.error("Error communicating with the server:", error);
-                        messageElement.innerText = "Error communicating with the server.";
-                    }
-                };
-            } catch (err) {
-                console.error("Speech Recognition not supported:", err);
-                alert("Speech recognition is not supported in this browser.");
+            if (!selectedVoice) {
+                console.warn("Voz 'en-US' não encontrada.");
+                selectedVoice = voices[0];
             }
+
+            const utterance = new SpeechSynthesisUtterance(text);
+            utterance.lang = selectedVoice ? selectedVoice.lang : "en-US";
+            utterance.voice = selectedVoice;
+            utterance.rate = rate;
+
+            utterance.onstart = () => {
+                isSpeaking = true;
+                robotImg.src = ROBOT_GIF;
+                clearInterval(alternateTimeout);
+                staticTime = 0;
+            };
+
+            utterance.onend = () => {
+                isSpeaking = false;
+                robotImg.src = ROBOT_STATIC;
+            };
+
+            synth.speak(utterance);
         }
 
-        // Inicializar aplicação
         window.onload = () => {
-            setupSpeechRecognition();
             initializeConversation();
-            startStaticImageTimer(); // Iniciar temporizador de imagem estática
         };
     </script>
 </body>
