--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Talk to Robot Lex</title>
+    <title>Talk to Robot Samuel</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -41,7 +41,7 @@
     </style>
 </head>
 <body>
-    <h1>Talk to Robot Lex</h1>
+    <h1>Talk to Robot Samuel</h1>
     <img id="robot-img" src="../../imagens/robo1_static.png" alt="Robot">
     <p id="message" style="visibility: hidden;">Loading...</p>
     <button id="speak-button">Press to Start</button>
