--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -49,9 +49,13 @@
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+
+      <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+
     <script>
-        // Configuração do Firebase
         const firebaseConfig = {
             apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
             authDomain: "hannahenglishcourse.firebaseapp.com",
@@ -67,9 +71,12 @@
     <script>
         const ROBOT_GIF = "../../imagens/robo1.gif";
         const ROBOT_STATIC = "../../imagens/robo1_static.png";
+        const ROBOT_ALTERNATE = "../../imagens/robo2.gif";
         const messageElement = document.getElementById("message");
         const robotImg = document.getElementById("robot-img");
         const speakButton = document.getElementById("speak-button");
+
+        let recognition;
         let isSpeaking = false;
 
         // Função para o robô falar
@@ -110,6 +117,7 @@
                         speakButton.addEventListener("click", () => {
                             messageElement.style.visibility = "visible";
                             speak(data.response);
+                            speakButton.innerText = "Press to Speak";
                         }, { once: true });
                     } catch (error) {
                         console.error("Error fetching conversation:", error);
@@ -122,7 +130,51 @@
             });
         }
 
+        // Configurar reconhecimento de voz
+        function setupSpeechRecognition() {
+            try {
+                recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
+                recognition.lang = "en-US";
+                recognition.interimResults = false;
+                recognition.maxAlternatives = 1;
+
+                recognition.onstart = () => {
+                    speakButton.classList.add("listening");
+                    speakButton.innerText = "Listening...";
+                };
+
+                recognition.onend = () => {
+                    speakButton.classList.remove("listening");
+                    speakButton.innerText = "Press to Speak";
+                };
+
+                recognition.onresult = async (event) => {
+                    const userSpeech = event.results[0][0].transcript;
+                    messageElement.innerText = `You said: ${userSpeech}`;
+
+                    try {
+                        const response = await fetch('/api/chat', {
+                            method: 'POST',
+                            headers: { 'Content-Type': 'application/json' },
+                            body: JSON.stringify({ message: userSpeech })
+                        });
+                        const data = await response.json();
+                        messageElement.innerText = data.response;
+                        speak(data.response);
+                    } catch (error) {
+                        console.error("Error communicating with the server:", error);
+                        messageElement.innerText = "Error communicating with the server.";
+                    }
+                };
+            } catch (err) {
+                console.error("Speech Recognition not supported:", err);
+                alert("Speech recognition is not supported in this browser.");
+            }
+        }
+
+        // Inicializar aplicação
         window.onload = () => {
+            setupSpeechRecognition();
             initializeConversation();
         };
     </script>
